--- a/src/m01-course-introduction.Rmd
+++ b/src/m01-course-introduction.Rmd
@@ -1,8 +1,8 @@
 ---
 title: "Course Introduction"
 author: "Steve Simon"
-date: "July 24, 2018"
-output: ioslides_presentation
+date: "Created 2018-07-24"
+output: powerpoint_presentation
 ---
 
 ```{r setup, include=FALSE}
@@ -13,7 +13,7 @@ knitr::opts_chunk$set(echo = FALSE)
 
 ## Course instructor, Steve Simon
 
-![](~/introduction-to-SAS/images/SteveSimonPic.jpg)
+![](../images/SteveSimonPic.jpg)
 
 <div class="notes">
 
@@ -23,7 +23,7 @@ Greetings! My name is Steve Simon and I am the instructor for the class, MEDB 55
 
 ## Original developer, Mary Gerkovich
 
-![](~/introduction-to-SAS/images/MaryGerkovichUMKC.jpg)
+![](../images/MaryGerkovichUMKC.jpg)
 
 
 <div class="notes">
@@ -34,7 +34,7 @@ This course was originally developed by Dr. Mary Gerkovich. I've changed a few t
 
 ## A bit about myself
 
-![](~/introduction-to-SAS/images/SteveSimonPic2.jpg)
+![](../images/SteveSimonPic2.jpg)
 
 
 <div class="notes">
@@ -45,7 +45,7 @@ Let me share a bit about myself.
 
 ## DBHI, http://med.umkc.edu/dbhi/
 
-![](~/introduction-to-SAS/images/dbhi.png)
+![](../images/dbhi.png)
 
 
 <div class="notes">
@@ -56,7 +56,7 @@ I am a part-time faculty member in the Department of Biomedical and Health Infor
 
 ## Blog, http://blog.pmean.com
 
-![](~/introduction-to-SAS/images/blog.png)
+![](../images/blog.png)
 
 
 <div class="notes">
@@ -67,16 +67,16 @@ I have a blog and a website. Here's a picture of my blog. I write about Statisti
 
 ## Canvas site
 
-![](~/introduction-to-SAS/images/canvas.png)
-
 
 <div class="notes">
+
+../images/canvas.png
 
 My course is currently under development in Canvas. I hope to have a final version soon. Welcome to this class. I hope you'll have fun and learn a lot.
 
 </div>
 
-### Your first SAS program
+## Your first SAS program
 
 <div class="notes">
 
@@ -494,7 +494,7 @@ If you cannot get SAS running, drop me an email. It's tricky because it's the fi
 
 </div>
 
-### Getting started
+## Getting started
 
 <div class="notes">
 
@@ -524,7 +524,7 @@ I'll show some more videos about SAS.
 
 </div>
 
-### Getting started
+## Getting started
 
 <div class="notes">
 
@@ -554,7 +554,7 @@ I'll show some more videos about SAS.
 
 </div>
 
-### filename and infile
+## filename and infile
 
 <div class="notes">
 
@@ -596,7 +596,7 @@ The rest will be easy-peasy. All right. So good luck.
 
 </div>
 
-### Storing SAS datasets
+## Storing SAS datasets
 
 <div class="notes">
 
@@ -656,7 +656,7 @@ SAS do this and this and tile. Because it is stored permanently. It always wants
 
 </div>
 
-### Output Delivery System
+## Output Delivery System
 
 <div class="notes">
 
