--- a/src/m01-course-introduction.Rmd
+++ b/src/m01-course-introduction.Rmd
@@ -3,6 +3,9 @@ title: "Course Introduction"
 author: "Steve Simon"
 date: "Created 2018-07-24"
 output: powerpoint_presentation
+knit: (function(inputFile, encoding) {
+  rmarkdown::render(inputFile, encoding = encoding,
+  output_dir = "../results", output_format = "all") })  
 ---
 
 ```{r setup, include=FALSE}
@@ -11,9 +14,30 @@ output: powerpoint_presentation
 knitr::opts_chunk$set(echo = FALSE)
 ```
 
-## Course instructor, Steve Simon
+### Overview
 
-![](../images/SteveSimonPic.jpg)
++ Introducing your instructor
+
+<div class="notes">
+
+[[Speaker notes]]
+
+author: Steve Simon
+date: created 2018-08-29
+purpose: to produce slides for module01 videos
+license: public domain
+
+Here is an overview of what I want to cover in module02.
+
+Okay. I want to get you started using SAS. It's either going to be really easy or it's going to be really really hard. I want to give you as much guidance as I can without staring over your shoulder. Just quickly, I wrote this Powerpoint presentation and all the Powerpoint presentations using R Markdown. If you are curious I have a repository. It has some beautiful output.
+
+Greetings! My name is Steve Simon and I am the instructor for the class, MEDB 5507, Introduction to SAS.
+
+</div>
+
+### Course instructor, Steve Simon
+
+![Photo of Steve Simon](../images/m01-steve-simon-pic01.png)
 
 <div class="notes">
 
@@ -21,9 +45,9 @@ Greetings! My name is Steve Simon and I am the instructor for the class, MEDB 55
 
 </div>
 
-## Original developer, Mary Gerkovich
+### Original developer, Mary Gerkovich
 
-![](../images/MaryGerkovichUMKC.jpg)
+![Photo of Mary Gerkovich](../images/m01-mary-gerkovich.png)
 
 
 <div class="notes">
@@ -32,9 +56,9 @@ This course was originally developed by Dr. Mary Gerkovich. I've changed a few t
 
 </div>
 
-## A bit about myself
+### A bit about myself
 
-![](../images/SteveSimonPic2.jpg)
+![](../images/m01-steve-simon-pic02.png)
 
 
 <div class="notes">
@@ -43,9 +67,9 @@ Let me share a bit about myself.
 
 </div>
 
-## DBHI, http://med.umkc.edu/dbhi/
+### DBHI, http://med.umkc.edu/dbhi/
 
-![](../images/dbhi.png)
+![](../images/m01-dbhi.png)
 
 
 <div class="notes">
@@ -54,29 +78,110 @@ I am a part-time faculty member in the Department of Biomedical and Health Infor
 
 </div>
 
-## Blog, http://blog.pmean.com
+### Website, http://new.pmean.com
 
-![](../images/blog.png)
-
-
-<div class="notes">
-
-I have a blog and a website. Here's a picture of my blog. I write about Statistics, Research Ethics, and Evidence-Based Medicine.
-
-</div>
-
-## Canvas site
+![](../images/m01-website.png)
 
 
 <div class="notes">
 
-../images/canvas.png
-
-My course is currently under development in Canvas. I hope to have a final version soon. Welcome to this class. I hope you'll have fun and learn a lot.
+I have a blog and a website. I am trying to combine the two into a single site. It's a work in progress, but here is the url for my effort.
 
 </div>
 
-## Your first SAS program
+### Github, https://github.com/pmean
+
+![](../images/m01-github.png)
+
+
+<div class="notes">
+
+I have a github site. It includes some of the programs used in this class. All the material is public donain, but please do not plagiarize your homework from this github site.
+
+</div>
+
+### Canvas site
+
+![Screenshot of Canvas site](../images/m01-canvas.png)
+
+
+<div class="notes">
+
+My course is currently under development in Canvas. This is the instructors view. You will see a slightly different interface.
+
+</div>
+
+### Break #1
+
++ What have you learned
+  + Information about me (Steve Simon)
++ What's coming next
+  + Where can you get SAS
+
+### Where can you get SAS
+
++ On your UMKC computer
+  + Desktop, hard-wired to UMKC network
+  + No laptops, no home computers
++ UMKC Remote Labs
+  + Several locations on campus
+  + Remote access
++ Alternatives not covered in this class
+  + SAS University
+  + SAS OnDemand for Academics
+  + Jupyter lab
+  + SASMarkdown, StatWeave
+
+<div class="notes">[[Speaker notes]]
+
+There are several ways that you can get access to SAS software. One of these three options should work for you.
+
+You can get it running on your UMKC computer, and I will show you how to do this. You can also access SAS on the UMKC Remote Labs. I'll also show this.
+
+There are some alternatives which I will not show, but if you are interested in investigating, let me know. I am glad to talk privately with anyone about this.
+
+There is a very nice product that I have used in the past called SAS University. It is very difficult to install, but once you have it running, it is very easy to use.
+
+SAS Institute is phasing out SAS University in favor of SAS OnDemand for Academics. This looks like it is much easier to install, though it does require the instructor (me) to set up a few things first. I started work on this, but do not have anything ready yet for this class. Sorry!
+
+If anyone is a fan of Jupyter, you should note that Jupyter lab can run SAS code. You probably need to have SAS already running on your computer, and I have not had time to experiment with this. 
+
+If you are familiar with the R programming environment, there are a couple of packages, SASMarkdown and StatWeave, that allow you to integrate SAS code and output into your workflow. I have not had time to experiment with this either.
+
+</div>
+
+### SAS on your UMKC computer
+
+![Screenshot of UMKC IS page on SAS software](../images/m01-umkc-sas.png)
+
+<div class="notes">[[Speaker notes]]
+
+This screenshot may be too small for you to read, but you can find the proper link on the recommended readings list for this week on the Canvas website. SAS works for any desktop computer on the UMKC campus. But it has to be hard-wired to the UMKC netwok. By hard-wired, I mean that there is an ethernet cable connecting your computer to a socket on the wall.
+
+If you are fortunate enough to have access to a hard-wired computer, you can get SAS installed easily. Someone else will do it for you. It may already be sitting on your computer.
+
+With a very few rare exceptions, you cannot get UMKC to load SAS on a laptop computer or on a home computer. This because of the license agreement that UMKC signed wih SAS Institute. It does not allow for home use of SAS.
+
+</div>
+
+### UMKC Remote Labs
+
+![UMKC Remote Labs home page](../images/m01-umkc-remote-labs.png)
+
+<div class="notes">[[Speaker notes]]
+
+You can also run SAS through the UMKC Remote Labs. It should run fine on most browsers, though it can be a bit fussy. 
+
+</div>
+
+### Break #2
+
++ What have you learned
+  + Where you can get SAS
++ What's coming next
+  + Your first SAS program
+
+### Your first SAS program
 
 <div class="notes">
 
@@ -123,117 +228,7 @@ Try this yourself. It's a baby step. If it works then you can take more baby ste
 </div>
 
 
-## Documentation
-
-This PowerPoint presentation was written by Steve Simon in 2018-08-29 and was last modified on `r Sys.Date()`. It uses R Markdown, though the actual R code is fairly minimal. You can find the file that created this presentation on my [github repository](https://github.com/pmean/introduction-to-SAS).
-
-<div class="notes">[[Speaker notes]]
-
-Okay. I want to get you started using SAS. It's either going to be really easy or it's going to be really really hard. I want to give you as much guidance as I can without staring over your shoulder. Just quickly, I wrote this Powerpoint presentation and all the Powerpoint presentations using R Markdown. If you are curious I have a repository. It has some beautiful output.
-
-Greetings! My name is Steve Simon and I am the instructor for the class, MEDB 5507, Introduction to SAS.
-
-</div>
-
-## Course instructor, Steve Simon
-
-![](../images/SteveSimonPic.jpg)
-
-<div class="notes">[[Speaker notes]]
-
-Stop by. This class is very impersonal. I don't get to see you and you don't get to see me.
-
-</div>
-
-## Where can I get SAS
-
-+ On your UMKC computer
-  + Desktop, hard-wired to UMKC network
-  + No laptops, no home computers
-+ UMKC Student Computing Labs
-  + Several locations on campus
-  + Remote access
-+ SAS University
-  + Works on ANY computer
-+ Jupyter lab
-+ SASMarkdown
-
-<div class="notes">[[Speaker notes]]
-
-There are several ways that you can get access to SAS software. One of these three options should work for you.
-
-You can get it running on your UMKC computer, you can run it on the student computing labs.
-
-</div>
-
-## SAS on your UMKC computer
-
-![Screenshot of UMKC IS page on SAS software](../readings/umkc-2019.png)
-
-<div class="notes">[[Speaker notes]]
-
-This screenshot may be too small for you to read, but you can find the proper link on the recommended readings list for this week on the Canvas website. SAS works for any desktop computer on the UMKC campus. But it has to be hard-wired to the UMKC netwok. By hard-wired, I mean that there is an ethernet cable connecting your computer to a socket on the wall.
-
-If you are fortunate enough to have access to a hard-wired computer, you can get SAS installed easily. Someone else will do it for you. It may already be sitting on your computer.
-
-With a very few rare exceptions, you cannot get UMKC to load SAS on a laptop computer or on a home computer. This because of the license agreement that UMKC signed wih SAS Institute. It does not allow for home use of SAS.
-
-</div>
-
-## SAS at the UMKC Student Computing Labs
-
-![Screenshot of UMKC information page on computing labs](../readings/umkc-2019a.png)
-
-<div class="notes">[[Speaker notes]]
-
-Again, the image on your screen may be too small to read, but go to the recommended readings page on Canvas to call this up on your computer. 
-
-There are several student computing labs on campus that already have SAS installed on them.
-
-You can visit the labs in person, or you can connect to those labs using Remote Desktop Connection.
-
-If you have any trouble with this, come and see me and I'll muddle through it with you.
-
-</div>
-
-## SAS using SAS University
-
-![Screenshot of main page for SAS University]
-
-<div class="notes">[[Speaker notes]]
-
-I don't have the right picture here. Sorry!
-
-SAS Institute recognized that their licensing terms sometimes prevented students from having access to SAS software, and they dearly want you to learn SAS so that you'll demand access to SAS when you get your big job in the corporate world. So they developed a system, SAS University, that you can use for free for educational purposes. I have SAS University installed on my laptop computer and it is very nice. The user interface is slightly different, but only slightly, and it seems to have just as many capabilities as the commercial version.
-
-Now, installation is a bit tricky, but do try it. It is a very nice system. I will do much of my work in preparing teaching examples using SAS University. I don't do all of it. Sometimes I'll switch between systems. SAS University allows me to continue my work at home.
-
-</div>
-
-## SAS using Jupyter notebooks
-
-![Screenshot of SAS blog entry on Jupyter]
-
-<div class="notes">[[Speaker notes]]
-
-Again, I apologize.
-
-If you are adventurous, (and I certainly encourage people to be adventurous) you can run SAS within a Jupyter notebook. This works easily with SAS University, but I believe you can also run the commercial version of SAS in a Jupyter notebook. I will not talk about Jupyter in this class, it is beyond the scope of this class. We only have a certain amount of time and I'm not going to waste time on Jupyter. But if you want to explore SAS and Jupyter, I can work with you informally on this.
-
-</div>
-
-## SAS using SAS markdown
-
-![Screenshot of SAS markdown web page]
-
-<div class="notes">[[Speaker notes]]
-
-Also beyond the scope of this class is running SAS within R. It uses an R library called SAS markdown. Very nice actually.
-
-</div>
-
-
-## Opening screen - SAS commercial version
+### Opening screen - SAS commercial version
 
 
 ![Opening screen of SAS with multiple windows](../images/opening-screen.png)
@@ -245,7 +240,7 @@ If you are running the "regular" version of SAS, click on the icon and here's an
 
 </div>
 
-## SAS program editor (1 of 2)
+### SAS program editor (1 of 2)
 
 ![Maximized view of empty SAS program editor window](../images/program-editor.png)
 
@@ -256,7 +251,7 @@ This is the program editor window. You type in your program in this window, or r
 
 </div>
 
-## SAS program editor (2 of 2)
+### SAS program editor (2 of 2)
 
 ![Program editor window with simple SAS program](../images/test-program1.png)
 
@@ -269,7 +264,7 @@ If you are using the computer labs, you need to save things on a network folder.
 
 </div>
 
-## SAS Test program
+### SAS Test program
 
 ```
 data test_example;
@@ -292,7 +287,7 @@ After you type this program in, click on FILE | SAVE and store your program some
 
 </div>
 
-## SAS log window (1 of 2)
+### SAS log window (1 of 2)
 
 ![Maximized view of SAS log window](../images/log-window1.png)
 
@@ -303,9 +298,9 @@ The font here is a bit small, but notice that there are no red messages indicati
 
 </div>
 
-## SAS log window (2 of 2)
+### SAS log window (2 of 2)
 
-![Maimized view of SAS log window, second page](../images/log-window2.png)
+![Maximized view of SAS log window, second page](../images/log-window2.png)
 
 
 <div class="notes">[[Speaker notes]]
@@ -314,7 +309,7 @@ Always start looking for error messages at the top. The very first error or warn
 
 </div>
 
-## Log messages (1 of 2)
+### Log messages (1 of 2)
 
 ```
 1    data test_example;
@@ -334,7 +329,7 @@ Always watch the log to see that you have read in the proper number of observati
 </div>
 
 
-## Log messages (2 of 2)
+### Log messages (2 of 2)
 
 ```
 9    proc means data=test_example;
@@ -355,7 +350,7 @@ NOTE: PROCEDURE MEANS used (Total process time):
 
 </div>
 
-## Where is the output?
+### Where is the output?
 
 SAS has several options for storing output.
 
@@ -369,7 +364,7 @@ Output is tricky. I want to talk in more detail later about this, but you can ta
 
 </div>
 
-## Preferences window
+### Preferences window
 
 ![Preferences dialog box](../images/preferences-results-window.png)
 
@@ -379,7 +374,7 @@ There is a preference box. I don't want to talk about it today, but if you are a
 
 </div>
 
-## SAS output window
+### SAS output window
 
 ![Maximized view of default SAS output](../images/output-window.png)
 
@@ -389,7 +384,7 @@ Here's what the output window looks like. Notice that SAS uses a monospaced font
 
 </div>
 
-## SAS html output
+### SAS html output
 
 ![Maximized view of html output](../images/output-html.png)
 
@@ -399,83 +394,7 @@ Here's what the html output looks like. Notice variety of font sizes and colors.
 
 </div>
 
-## Getting started with SAS University edition (1 of 4)
-
-![View of virtual box, your entry point to SAS University](../images/virtualbox.png)
-
-<div class="notes">[[Speaker notes]]
-
-If you are using SAS University, you start by opening Oracle Virtualbox. This is machine within a machine. It is similar to docker, if you are familiar with the Linus environment.
-
-Installation instructions are available.
-
-http://support.sas.com/software/products/university-edition/docs/en/SASUniversityEditionQuickStartVirtualBox.pdf
-
-</div>
-
-## Getting started with SAS University edition (2 of 4)
-
-![Second step in starting SAS University](../images/virtualbox2.png)
-
-
-<div class="notes">[[Speaker notes]]
-
-Click on the SAS University Edition tab and a new window opens up. It explains that you need to point your web browser to a particular location. It also warns you to keep this window open.
-
-</div>
-
-## Getting started with SAS University edition (3 of 4)
-
-![Third step in staring SAS University](../images/virtualbox3.png)
-
-<div class="notes">[[Speaker notes]]
-
-When you open your web browser to http://localhost:10080, you get the option of starting with SAS Studio or with a Jupyter notebook. I have not had much luck with Jupyter, but you are welcome to try this on your own.
-
-</div>
-
-## Getting started with SAS University edition (4 of 4)
-
-![](../images/sas-university-startup.png)
-
-
-<div class="notes">[[Speaker notes]]
-
-When you open your web browser to http://localhost:10080, you get the option of starting with SAS Studio or with a Jupyter notebook. I have not had much luck with Jupyter, but you are welcome to try this on your own.
-
-</div>
-
-## SAS University program window
-
-![SAS University program window](../images/sas-university-program.png)
-
-<div class="notes">[[Speaker notes]]
-
-You will notice a slightly different appearance with SAS University. Not so much that it's going to cause problems. Here is the program window.
-
-</div>
-
-- - -
-
-![SAS Univesity log window](../images/sas-university-log.png)
-
-<div class="notes">[[Speaker notes]]
-
-Here is the log window. Notice that the counts for errors, warnings, and notes appear at the top, and a missing count means zero errors and zero warnings. Hooray!
-
-## SAS University results
-
-![SAS University results window](../images/sas-university-results.png)
-
-<div class="notes">[[Speaker notes]]
-
-Here is the results window. The icons near the top offer a variety of export options, among other things.
-
-It won't work the first time for you. Don't be intimidated by this. It didn't work the first time for me either, and I'm a genius.
-
-</div>
-
-## Conclusion
+### Conclusion
 
 You can run the commercial version of SAS using
 
@@ -494,11 +413,18 @@ If you cannot get SAS running, drop me an email. It's tricky because it's the fi
 
 </div>
 
-## Getting started
+### Break #3
+
++ What have you learned
+  + Your first SAS program
++ What's coming next
+  + History of SAS
+
+### History of SAS
+
+![Blog post on the history of SAS](../images/m01-history-of-sas.png)
 
 <div class="notes">
-
-I'm going to record several extra lectures. If you're having trouble running SAS, it's okay. Your first program is the hardest.
 
 History of SAS. If you understand where SAS comes from, you understand some of the limitations.
 
@@ -524,37 +450,22 @@ I'll show some more videos about SAS.
 
 </div>
 
-## Getting started
+### Break #4
 
-<div class="notes">
++ What have you learned
+  + History of SAS
++ What's coming next
+  +  Documentation header
+  
+### Documentation header
 
-I'm going to record several extra lectures. If you're having trouble running SAS, it's okay. Your first program is the hardest.
+### Permanent storage
 
-History of SAS. If you understand where SAS comes from, you understand some of the limitations.
+### Saving output
 
-This is on my blog.
+### Input text
 
-SAS was developed at NC State. SAS Institute was formed in 1976. It is a privately held company.
-
-The SAS Headquarters is in Cary, NC, and it is huge. It is a pretty nice place to work.
-
-In the 1960's, IBM mainframes dominated. So SAS was originally written just for these systems. Originally, SAS was written in a mix of PL/1, Fortran, and Assembler. Millions of lines of code re-written in C in 1985 so that SAS could run on personal computers.
-
-Talk about JMP. Extensive use of dynamic graphics. If you can see a demo, it is pretty amazing.
-
-SAS is oriented around various data sets and procedures. There is a menu driven version of SAS, but it is not very good. If you want a good package that is totally menu driven, use SPSS.
-
-SAS has a licensing model that is prohibitive for individual consultants. They offer a free product, SAS University, that is intended for teaching.
-
-SAS has literally hundreds of books. It has a certification program. 
-
-SAS was built in the 1960s. There is very little software written in the 1960s. It shows the staying power, but it is "long in the tooth."
-
-I'll show some more videos about SAS.
-
-</div>
-
-## filename and infile
+### filename and infile
 
 <div class="notes">
 
@@ -596,7 +507,7 @@ The rest will be easy-peasy. All right. So good luck.
 
 </div>
 
-## Storing SAS datasets
+### Storing SAS datasets
 
 <div class="notes">
 
@@ -656,7 +567,7 @@ SAS do this and this and tile. Because it is stored permanently. It always wants
 
 </div>
 
-## Output Delivery System
+### Output Delivery System
 
 <div class="notes">
 
